--- a/TestingDNNs.ipynb
+++ b/TestingDNNs.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": 2,
       "metadata": {
         "id": "gifiwVRpyh-g"
       },
@@ -56,10 +56,10 @@
       "source": [
         "#file = open('SingleSidedAmplitudeSpectrum_labelled.csv')\n",
         "#file = open('LabelledMatrixTimeDomain.csv')\n",
-        "file = open('./MATLAB/ExtractedFeatures_labelled.csv')\n",
-        "data = np.loadtxt(file, delimiter=\",\")\n",
         "\n",
-        "training_set, test_set, training_labels, test_labels = train_test_split(data[:,3:], data[:,0], test_size=0.33, random_state=42)\n",
+        "data = data_sec_1 = pd.read_csv(join(\"./data/accelerometer_data_section_1.csv\"))\n",
+        "\n",
+        "training_set, test_set, training_labels, test_labels = train_test_split(data[:,3:], data[:,0], test_size=0.25, random_state=42)\n",
         "\n",
         "print(data.shape)\n",
         "# training_set = data[0:1991,3:]\n",
