--- a/TestingDNNs.ipynb
+++ b/TestingDNNs.ipynb
@@ -25,7 +25,7 @@
         "from tensorflow.keras.optimizers import SGD, Adam\n",
         "from tensorflow.keras.utils import to_categorical\n",
         "import pandas as pd\n",
-        "import os \n",
+        "from os.path import join\n",
         "import sys\n",
         "from sklearn.model_selection import train_test_split"
       ]
@@ -57,7 +57,7 @@
         "#file = open('SingleSidedAmplitudeSpectrum_labelled.csv')\n",
         "#file = open('LabelledMatrixTimeDomain.csv')\n",
         "\n",
-        "data = data_sec_1 = pd.read_csv(join(\"./data/accelerometer_data_section_1.csv\"))\n",
+        "data = pd.read_csv(join(\"./data/accelerometer_data_section_1.csv\"))\n",
         "\n",
         "training_set, test_set, training_labels, test_labels = train_test_split(data[:,3:], data[:,0], test_size=0.25, random_state=42)\n",
         "\n",
@@ -274,7 +274,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.8.7"
+      "version": "3.8.2"
     }
   },
   "nbformat": 4,
