--- a/inspection.ipynb
+++ b/inspection.ipynb
@@ -22,6 +22,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "things = pd.read_csv(join(\"./tsfresh_features.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3094, 790)"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "things.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "data_sec_1 = pd.read_csv(join(\"./data/accelerometer_data_section_1.csv\"))\n",
     "data_sec_2 = pd.read_csv(join(\"./data/accelerometer_data_section_2.csv\"))\n",
     "data_sec_3 = pd.read_csv(join(\"./data/accelerometer_data_section_3.csv\"))\n",
@@ -353,7 +382,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.1"
+   "version": "3.8.2"
   },
   "orig_nbformat": 4
  },
