--- a/inspection.ipynb
+++ b/inspection.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,27 +27,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3094, 790)"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "things.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -93,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +93,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,83 +151,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# # Generate dataset\n",
-    "from scipy.interpolate import interp1d\n",
-    "from sklearn.metrics import mean_squared_error\n",
-    "df_orig = pd.read_csv('https://raw.githubusercontent.com/selva86/datasets/master/a10.csv', parse_dates=['date'], index_col='date').head(100)\n",
-    "df = pd.read_csv('datasets/a10_missings.csv', parse_dates=['date'], index_col='date')\n",
-    "\n",
-    "fig, axes = plt.subplots(7, 1, sharex=True, figsize=(10, 12))\n",
-    "plt.rcParams.update({'xtick.bottom' : False})\n",
-    "\n",
-    "## 1. Actual -------------------------------\n",
-    "df_orig.plot(title='Actual', ax=axes[0], label='Actual', color='red', style=\".-\")\n",
-    "df.plot(title='Actual', ax=axes[0], label='Actual', color='green', style=\".-\")\n",
-    "axes[0].legend([\"Missing Data\", \"Available Data\"])\n",
-    "\n",
-    "## 2. Forward Fill --------------------------\n",
-    "df_ffill = df.ffill()\n",
-    "error = np.round(mean_squared_error(df_orig['value'], df_ffill['value']), 2)\n",
-    "df_ffill['value'].plot(title='Forward Fill (MSE: ' + str(error) +\")\", ax=axes[1], label='Forward Fill', style=\".-\")\n",
-    "\n",
-    "## 3. Backward Fill -------------------------\n",
-    "df_bfill = df.bfill()\n",
-    "error = np.round(mean_squared_error(df_orig['value'], df_bfill['value']), 2)\n",
-    "df_bfill['value'].plot(title=\"Backward Fill (MSE: \" + str(error) +\")\", ax=axes[2], label='Back Fill', color='firebrick', style=\".-\")\n",
-    "\n",
-    "## 4. Linear Interpolation ------------------\n",
-    "df['rownum'] = np.arange(df.shape[0])\n",
-    "df_nona = df.dropna(subset = ['value'])\n",
-    "f = interp1d(df_nona['rownum'], df_nona['value'])\n",
-    "df['linear_fill'] = f(df['rownum'])\n",
-    "error = np.round(mean_squared_error(df_orig['value'], df['linear_fill']), 2)\n",
-    "df['linear_fill'].plot(title=\"Linear Fill (MSE: \" + str(error) +\")\", ax=axes[3], label='Cubic Fill', color='brown', style=\".-\")\n",
-    "\n",
-    "## 5. Cubic Interpolation --------------------\n",
-    "f2 = interp1d(df_nona['rownum'], df_nona['value'], kind='cubic')\n",
-    "df['cubic_fill'] = f2(df['rownum'])\n",
-    "error = np.round(mean_squared_error(df_orig['value'], df['cubic_fill']), 2)\n",
-    "df['cubic_fill'].plot(title=\"Cubic Fill (MSE: \" + str(error) +\")\", ax=axes[4], label='Cubic Fill', color='red', style=\".-\")\n",
-    "\n",
-    "# Interpolation References:\n",
-    "# https://docs.scipy.org/doc/scipy/reference/tutorial/interpolate.html\n",
-    "# https://docs.scipy.org/doc/scipy/reference/interpolate.html\n",
-    "\n",
-    "## 6. Mean of 'n' Nearest Past Neighbors ------\n",
-    "def knn_mean(ts, n):\n",
-    "    out = np.copy(ts)\n",
-    "    for i, val in enumerate(ts):\n",
-    "        if np.isnan(val):\n",
-    "            n_by_2 = np.ceil(n/2)\n",
-    "            lower = np.max([0, int(i-n_by_2)])\n",
-    "            upper = np.min([len(ts)+1, int(i+n_by_2)])\n",
-    "            ts_near = np.concatenate([ts[lower:i], ts[i:upper]])\n",
-    "            out[i] = np.nanmean(ts_near)\n",
-    "    return out\n",
-    "\n",
-    "df['knn_mean'] = knn_mean(df.value.values, 8)\n",
-    "error = np.round(mean_squared_error(df_orig['value'], df['knn_mean']), 2)\n",
-    "df['knn_mean'].plot(title=\"KNN Mean (MSE: \" + str(error) +\")\", ax=axes[5], label='KNN Mean', color='tomato', alpha=0.5, style=\".-\")\n",
-    "\n",
-    "## 7. Seasonal Mean ----------------------------\n",
-    "def seasonal_mean(ts, n, lr=0.7):\n",
-    "    \"\"\"\n",
-    "    Compute the mean of corresponding seasonal periods\n",
-    "    ts: 1D array-like of the time series\n",
-    "    n: Seasonal window length of the time series\n",
-    "    \"\"\"\n",
-    "    out = np.copy(ts)\n",
-    "    for i, val in enumerate(ts):\n",
-    "        if np.isnan(val):\n",
-    "            ts_seas = ts[i-1::-n]  # previous seasons only\n",
-    "            if np.isnan(np.nanmean(ts_seas)):\n",
-    "                ts_seas = np.concatenate([ts[i-1::-n], ts[i::n]])  # previous and forward\n",
-    "            out[i] = np.nanmean(ts_seas) * lr\n",
-    "    return out\n",
-    "\n",
-    "df['seasonal_mean'] = seasonal_mean(df.value, n=12, lr=1.25)\n",
-    "error = np.round(mean_squared_error(df_orig['value'], df['seasonal_mean']), 2)\n",
-    "df['seasonal_mean'].plot(title=\"Seasonal Mean (MSE: \" + str(error) +\")\", ax=axes[6], label='Seasonal Mean', color='blue', alpha=0.5, style=\".-\")"
+    "data_sec_7['Timestamp']"
    ]
   },
   {
@@ -250,50 +163,95 @@
     "# Plot data\n",
     "\n",
     "\n",
-    "fig = go.Figure()\n",
+    "# fig = go.Figure()\n",
     "\n",
-    "fig.add_trace(go.Scatter(x = data['Timestamp'],\n",
-    "                         y = data['Acceleration'],\n",
-    "                         mode='lines',\n",
+    "# fig.add_trace(go.Scatter(x = data['Timestamp'],\n",
+    "#                          y = data['Acceleration'],\n",
+    "#                          mode='lines',\n",
     "                         \n",
-    "                         name='Acceleration'))  \n",
+    "#                          name='Acceleration'))  \n",
     "\n",
-    "fig.add_trace(go.Scatter(x = clifton_timestamps['Timestamp'],\n",
-    "                         y = clifton_timestamps['Direction_Leigh_Woods'],\n",
-    "                         mode='markers',\n",
+    "# # fig.add_trace(go.Scatter(x = clifton_timestamps['Timestamp'],\n",
+    "# #                          y = clifton_timestamps['Direction_Leigh_Woods'],\n",
+    "# #                          mode='markers',\n",
     "                         \n",
-    "                         name='Clifton Direction'))\n",
+    "# #                          name='Clifton Direction'))\n",
     "\n",
-    "fig.add_trace(go.Scatter(x = leigh_woods_timestamps['Timestamp'],\n",
-    "                         y = leigh_woods_timestamps['Direction_Clifton'],\n",
-    "                         mode='markers',\n",
+    "# # fig.add_trace(go.Scatter(x = leigh_woods_timestamps['Timestamp'],\n",
+    "# #                          y = leigh_woods_timestamps['Direction_Clifton'],\n",
+    "# #                          mode='markers',\n",
     "                        \n",
-    "                         name='Leigh Woods Direction'))    \n",
+    "# #                          name='Leigh Woods Direction'))    \n",
     "\n",
-    "fig.update_xaxes(range=[clifton_timestamps['Timestamp'].min(), clifton_timestamps['Timestamp'].max()])\n",
+    "# fig.update_xaxes(range=[clifton_timestamps['Timestamp'].min(), clifton_timestamps['Timestamp'].max()])\n",
     "\n",
-    "fig.show()"
+    "# fig.show()\n",
+    "\n",
+    "\n",
+    "\n",
+    "g1 = (data_sec_1['Timestamp'], data_sec_1['Acceleration'])\n",
+    "g2 = (data_sec_2['Timestamp'], data_sec_2['Acceleration'])\n",
+    "g3 = (data_sec_3['Timestamp'], data_sec_3['Acceleration'])\n",
+    "g4 = (data_sec_4['Timestamp'], data_sec_4['Acceleration'])\n",
+    "g5 = (data_sec_5['Timestamp'], data_sec_5['Acceleration'])\n",
+    "g6 = (data_sec_6['Timestamp'], data_sec_6['Acceleration'])\n",
+    "g7 = (data_sec_7['Timestamp'], data_sec_7['Acceleration'])\n",
+    "\n",
+    "\n",
+    "import dateutil\n",
+    "lower_bound = dateutil.parser.parse('2021-04-22 09:15:00.000000')\n",
+    "upper_bound = dateutil.parser.parse('2021-04-22 16:50:00.000000')\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.dates as mdates\n",
+    "from matplotlib.patches import Patch\n",
+    "from matplotlib.lines import Line2D\n",
+    "\n",
+    "myFmt = mdates.DateFormatter('%H:%M:%S') # here you can format your datetick labels as desired\n",
+    "plt.gca().xaxis.set_major_formatter(myFmt)\n",
+    "\n",
+    "\n",
+    "clifton_timestamps['value'] = clifton_timestamps['Direction_Leigh_Woods']-0.005\n",
+    "leigh_woods_timestamps['value'] = leigh_woods_timestamps['Direction_Clifton']+0.005\n",
+    "\n",
+    "SMALL_SIZE = 16\n",
+    "MEDIUM_SIZE = 18\n",
+    "BIGGER_SIZE = 12\n",
+    "\n",
+    "plt.rc('font', size=SMALL_SIZE)          # controls default text sizes\n",
+    "plt.rc('axes', titlesize=SMALL_SIZE)     # fontsize of the axes title\n",
+    "plt.rc('axes', labelsize=MEDIUM_SIZE)    # fontsize of the x and y labels\n",
+    "plt.rc('xtick', labelsize=SMALL_SIZE)    # fontsize of the tick labels\n",
+    "plt.rc('ytick', labelsize=SMALL_SIZE)    # fontsize of the tick labels\n",
+    "plt.rc('legend', fontsize=16)    # legend fontsize\n",
+    "plt.rc('figure', titlesize=BIGGER_SIZE) \n",
+    "\n",
+    "plt.rcParams[\"figure.figsize\"] = (25,7)\n",
+    "# plt.tight_layout()\n",
+    "plt.set_cmap('cividis')\n",
+    "plt.plot(data_sec_1['Timestamp'], data_sec_1['Acceleration'], '.', label='Section 1')\n",
+    "plt.plot(data_sec_2['Timestamp'], data_sec_2['Acceleration'], '.', label='Section 2')\n",
+    "plt.plot(data_sec_3['Timestamp'], data_sec_3['Acceleration'], '.', label='Section 3')\n",
+    "plt.plot(data_sec_4['Timestamp'], data_sec_4['Acceleration'], '.', label='Section 4')\n",
+    "plt.plot(data_sec_5['Timestamp'], data_sec_5['Acceleration'], '.', label='Section 5')\n",
+    "plt.plot(data_sec_6['Timestamp'], data_sec_6['Acceleration'], '.', label='Section 6')\n",
+    "plt.plot(data_sec_7['Timestamp'], data_sec_7['Acceleration'], '.', label='Section 7')\n",
+    "\n",
+    "# plt.plot(clifton_timestamps['Timestamp'], clifton_timestamps['value'], 'x')\n",
+    "# plt.plot(leigh_woods_timestamps['Timestamp'], leigh_woods_timestamps['value'], 'x')\n",
+    "plt.xlim([lower_bound, upper_bound])\n",
+    "plt.ylim([-0.1, 0.1])\n",
+    "plt.ylabel(\"Acceleration\")\n",
+    "plt.xlabel(\"Timestamp\")\n",
+    "plt.legend(loc = 'upper right')\n",
+    "plt.show()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ValueError",
-     "evalue": "Mime type rendering requires nbformat>=4.2.0 but it is not installed",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_1088/1458155882.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     42\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     43\u001b[0m \u001b[0mfig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mupdate_layout\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mheight\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1080\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mwidth\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m1920\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mtitle_text\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m\"Stacked Subplots\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 44\u001b[1;33m \u001b[0mfig\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\plotly\\basedatatypes.py\u001b[0m in \u001b[0;36mshow\u001b[1;34m(self, *args, **kwargs)\u001b[0m\n\u001b[0;32m   3396\u001b[0m         \u001b[1;32mimport\u001b[0m \u001b[0mplotly\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mio\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mpio\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3397\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m-> 3398\u001b[1;33m         \u001b[1;32mreturn\u001b[0m \u001b[0mpio\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m   3399\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m   3400\u001b[0m     \u001b[1;32mdef\u001b[0m \u001b[0mto_json\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m*\u001b[0m\u001b[0margs\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;33m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\plotly\\io\\_renderers.py\u001b[0m in \u001b[0;36mshow\u001b[1;34m(fig, renderer, validate, **kwargs)\u001b[0m\n\u001b[0;32m    395\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    396\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;32mnot\u001b[0m \u001b[0mnbformat\u001b[0m \u001b[1;32mor\u001b[0m \u001b[0mLooseVersion\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mnbformat\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__version__\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m<\u001b[0m \u001b[0mLooseVersion\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"4.2.0\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 397\u001b[1;33m             raise ValueError(\n\u001b[0m\u001b[0;32m    398\u001b[0m                 \u001b[1;34m\"Mime type rendering requires nbformat>=4.2.0 but it is not installed\"\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    399\u001b[0m             )\n",
-      "\u001b[1;31mValueError\u001b[0m: Mime type rendering requires nbformat>=4.2.0 but it is not installed"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Plot subplot data\n",
     "\n",
